--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="ComboModel.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
+    <script src="init.js" type="text/javascript"></script>
 </head>
 <body onload="init()">
     <h1>Poker hands</h1>
@@ -13,6 +14,7 @@
     <div class="color-tile selected-color"></div>
     <div class="group-counts"></div>
     <div class="grid-holder"></div>
+    <div class="grid-cards"></div>
 
 </body>
 </html>
